--- a/src/App.css
+++ b/src/App.css
@@ -10,38 +10,47 @@
 .bg-blue {background: #233a95;}
 .container {max-width: 90%;}
 .headerWrapper .top-strip {padding: 8px 0px;}
-
 .headerWrapper .top-strip p {color: #fff; font-size: 12px; font-weight: 700;}
-
-.headerWrapper .header {width: 100%; height: auto;padding: 10px 0px;}
-
+.headerWrapper .header {width: 100%; height: auto;padding: 25px 0px;}
 .logoWrapper img {width: 100%;}
 
-.headerWrapper .header .part2 .countryDrop{ width: 170px; height: 60px; min-width: 170px; color: #000 !important; border: 1px solid rgba(0,0,0,0.2) !important; border-radius: 7px !important; padding: 10px 15px !important;}
+
+.headerWrapper .header .part2 .countryDrop{ width: 170px; height: 60px; min-width: 170px; color: #000 !important; border: 1px solid rgba(0,0,0,0.1) !important; border-radius: 7px !important; padding: 10px 15px !important;}
 .headerWrapper .header .part2 .countryDrop{text-align: left; justify-content: flex-start !important;}
-
 .headerWrapper .header .part2 .countryDrop .label{font-size: 12px !important; text-transform: capitalize !important; color: rgba(0,0,0,0.4) !important; line-height: 16px;}
-
 .headerWrapper .header .part2 .countryDrop .name{font-size: 14px !important; text-transform: capitalize !important; color: #233a95 !important; font-weight: 700; line-height: 16px;}
-
 .headerWrapper .header .part2 .countryDrop span.ml.auto svg{opacity: 0.7;}
 
-header .headerSearch{width: 60%; height: 60px; background: #f3f4f7; padding: 10px; position: relative;border-radius: 5px; border: 1px solid rgba(0,0,0,0.1);}
 
+
+header .headerSearch{width: 60%; height: 60px; background: #f3f4f7; padding: 10px; position: relative;border-radius: 5px; border: 1px solid rgba(0,0,0,0.03);}
 header .headerSearch input{background: transparent !important; outline: none !important; font-size: 14px; color: rgba(0,0,0,0.5); width: 100%; height: 40px; border: 0px !important; padding: 0px 20px !important;}
-
 header .headerSearch button{position: absolute; top: 10px; right: 15px;z-index: 100; min-width: 40px !important; height: 40px !important; width: 40px !important; border-radius: 50px !important;}
+header .headerSearch .but svg {font-size: 20px;}
 
 
 header .part3 .circle{align-items: center; justify-content: center; min-width: 45px !important; height: 45px !important; width: 45px !important; border-radius: 50% !important; border: 1px solid rgba(0,0,0,0.1) !important; color: #000;}
-
 header .part3 .circle svg {font-size: 22px;}
 
-header .headerSearch .but svg {font-size: 20px;}
 
 .cartTab .price{font-size: 18px; color: rgba(0,0,0,0.8); font-weight: 700;}
 .cartTab button{background: #fff1ee !important;}
 .cartTab button svg{color: #ea2b0f !important;}
 .cartTab .count{position: absolute; top: -6px; right: -4px; background: #ea2b0f; border-radius: 50%; color: #fff; display: flex; width: 20px; height: 20px;}
+
+
+
+nav .allCatTab {background: #2bbef9; padding: 10px 15px !important;border-radius: 30px !important;}
+nav .allCatTab *{color: #fff}
+nav .allCatTab:hover{background: #2bbef9;}
+nav .allCatTab .text{font-weight: 600;}
+nav .allCatTab .icon1 svg{font-size: 20px !important;}
+nav .allCatTab .icon2 svg{font-size: 15px !important;}
+
+
+nav .navPart2 ul{margin-bottom: 0px;}
+nav .navPart2 ul li a{font-size: 16px; font-weight: 500; text-decoration: none; color: rgba(0,0,0,0.7); text-transform: uppercase; display: flex; align-items: center; padding: 10px 20px; transition: all 0.2s ease-in-out; border-radius: 25px;}
+nav .navPart2 ul li a:hover{background: #f0faff; color: #2bbef9;}
+nav .navPart2 ul li a svg{font-size: 20px;}
 
 
