--- a/src/App.css
+++ b/src/App.css
@@ -22,11 +22,11 @@
 
 
 
-header .headerSearch{width: 60%; height: 60px; background: #f3f4f7; padding: 10px; position: relative;border-radius: 5px; border: 1px solid rgba(0,0,0,0.03);}
-header .headerSearch input{background: transparent !important; outline: none !important; font-size: 14px; color: rgba(0,0,0,0.5); width: 100%; height: 40px; border: 0px !important; padding: 0px 20px !important;}
-header .headerSearch button{position: absolute; top: 10px; right: 15px;z-index: 100; min-width: 40px !important; height: 40px !important; width: 40px !important; border-radius: 50px !important;}
-header .headerSearch .but svg {font-size: 20px;}
-
+.headerSearch{width: 60%; height: 60px; background: #f3f4f7; padding: 10px; position: relative;border-radius: 5px; border: 1px solid rgba(0,0,0,0.03);}
+.headerSearch input{background: transparent !important; outline: none !important; font-size: 14px; color: rgba(0,0,0,0.5); width: 100%; height: 40px; border: 0px !important; padding: 0px 20px !important;}
+.headerSearch button{position: absolute; top: 10px; right: 10px;z-index: 100; min-width: 40px !important; height: 40px !important; width: 40px !important; border-radius: 50px !important;}
+.headerSearch .but svg {font-size: 20px; opacity: 0.8;}
+.headerSearch input::-webkit-input-placeholder{color: rgba(0,0,0,0.4);}
 
 header .part3 .circle{align-items: center; justify-content: center; min-width: 45px !important; height: 45px !important; width: 45px !important; border-radius: 50% !important; border: 1px solid rgba(0,0,0,0.1) !important; color: #000;}
 header .part3 .circle svg {font-size: 22px;}
@@ -38,6 +38,16 @@ header .part3 .circle svg {font-size: 22px;}
 .cartTab .count{position: absolute; top: -6px; right: -4px; background: #ea2b0f; border-radius: 50%; color: #fff; display: flex; width: 20px; height: 20px;}
 
 
+::-webkit-scrollbar{width: 8px !important; height: 8px !important;}
+::-webkit-scrollbar-thumb{background: #ccc !important;}
+::-webkit-scrollbar-track{background: transparent !important;}
+
+.locationModal .MuiPaper-elevation{padding: 25px; position: relative;}
+.locationModal .countryList{margin-bottom: 0px; max-height: 400px; overflow-y: scroll; overflow-x: hidden;}
+.locationModal .countryList li{width: 100%; list-style: none;}
+.locationModal .countryList li button{width: 100%; text-transform: capitalize !important; color: #000 !important; justify-content: flex-start !important; padding: 10px 20px !important;}
+.locationModal .close_{position: absolute; top: 10px; right: 10px; color: #000 !important; min-width: 40px !important; width: 40px !important; height: 40px !important; border-radius: 50% !important;}
+.locationModal .close_ svg{font-size: 22px;}
 
 nav .allCatTab {background: #2bbef9; padding: 10px 15px !important;border-radius: 30px !important;}
 nav .allCatTab *{color: #fff}
@@ -48,7 +58,11 @@ nav .allCatTab .icon2 svg{font-size: 15px !important;}
 
 
 nav .navPart2 ul{margin-bottom: 0px;}
-nav .navPart2 ul li a{font-size: 16px; font-weight: 520; text-decoration: none; color: rgba(0,0,0,0.5); text-transform: uppercase; display: flex; align-items: center; padding: 8px 14px; transition: all 0.2s ease-in-out; border-radius: 25px;}
+nav .navPart2 ul li a{text-decoration: none;}
+nav .navPart2 ul li a button{font-size: 14px; font-weight: 600; text-decoration: none; color: rgba(0,0,0,0.6); text-transform: uppercase; display: flex; align-items: center; padding: 10px 15px; transition: all 0.2s ease-in-out; border-radius: 25px;}
 nav .navPart2 ul li a:hover{background: #f0faff; color: #2bbef9;}
 
+
+nav .navPart1{max-width: 21%; flex: 0 0 21%}
+nav .navPart2{max-width: 79%; flex: 0 0 79%}
 
