--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 .headerWrapper .top-strip p {color: #fff; font-size: 12px; font-weight: 700;}
 .headerWrapper .header {width: 100%; height: auto;padding: 25px 0px;}
 .logoWrapper img {width: 100%;}
+.headerWrapper{border-bottom: 1px solid rgba(0,0,0,0.2);}
 
 
 .headerWrapper .header .part2 .countryDrop{ width: 170px; height: 60px; min-width: 170px; color: #000 !important; border: 1px solid rgba(0,0,0,0.1) !important; border-radius: 7px !important; padding: 10px 15px !important;}
@@ -46,6 +47,9 @@ header .part3 .circle svg {font-size: 22px;}
 .locationModal .countryList{margin-bottom: 0px; max-height: 400px; overflow-y: scroll; overflow-x: hidden;}
 .locationModal .countryList li{width: 100%; list-style: none;}
 .locationModal .countryList li button{width: 100%; text-transform: capitalize !important; color: #000 !important; justify-content: flex-start !important; padding: 10px 20px !important;}
+.locationModal .countryList li button:hover{background: #f1f1f1 !important}
+.locationModal .countryList li button.active{background: #e2e2e2 !important}
+
 .locationModal .close_{position: absolute; top: 10px; right: 10px; color: #000 !important; min-width: 40px !important; width: 40px !important; height: 40px !important; border-radius: 50% !important;}
 .locationModal .close_ svg{font-size: 22px;}
 
@@ -59,6 +63,7 @@ nav .allCatTab .icon2 svg{font-size: 15px !important;}
 
 nav .navPart2 ul{margin-bottom: 0px;}
 nav .navPart2 ul li a{text-decoration: none;}
+nav .navPart2 ul li{padding-bottom: 20px;}
 nav .navPart2 ul li a button{font-size: 14px; font-weight: 600; text-decoration: none; color: rgba(0,0,0,0.6); text-transform: uppercase; display: flex; align-items: center; padding: 10px 15px; transition: all 0.2s ease-in-out; border-radius: 25px;}
 nav .navPart2 ul li a:hover{background: #f0faff; color: #2bbef9;}
 
@@ -66,3 +71,10 @@ nav .navPart2 ul li a:hover{background: #f0faff; color: #2bbef9;}
 nav .navPart1{max-width: 21%; flex: 0 0 21%}
 nav .navPart2{max-width: 79%; flex: 0 0 79%}
 
+nav .navPart2 ul li{position: relative;}
+nav .navPart2 ul li .submenu{position: absolute; top:150%; left: 0px; min-width: 200px; background: #fff; opacity: 0; visibility: hidden; transition: all 0.1s ease-in-out;}
+nav .navPart2 ul li .submenu a{display: block; width: 100%;}
+nav .navPart2 ul li .submenu a button{width: 100%; justify-content: flex-start !important; border-radius: 0px !important; text-transform: capitalize !important; font-weight: 600 !important;}
+
+nav .navPart2 ul li .submenu a button:hover{background: #f1f1f1 !important;}
+nav .navPart2 ul li:hover .submenu{opacity: 1; visibility: inherit; top: 100%;}
