--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
+*{margin: 0px; padding: 0px}
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css');
+
 
 * {
   font-family: "Lato", sans-serif;
   margin: 0px;
   padding: 0px;
+  font-size: 14px;
 }
 
 
@@ -72,16 +77,28 @@ nav .navPart1{max-width: 21%; flex: 0 0 21%}
 nav .navPart2{max-width: 79%; flex: 0 0 79%}
 
 nav .navPart1 .catWrapper{position: relative;}
-nav .navPart1 .catWrapper .sidebarNav{width: 100%; height: 0px; opacity: 0; background: #fff; position: absolute; top: 136%; left: 0px; border: 1px solid rgba(0,0,0,0.1); padding: 15px 0px; transition: all 0.2s; visibility: hidden; overflow: hidden;}
+nav .navPart1 .catWrapper .sidebarNav{width: 100%; height: 0px; opacity: 0; background: #fff; position: absolute; top: 136%; left: 0px; border: 1px solid rgba(0,0,0,0.1); padding: 15px 0px; transition: all 0.2s; visibility: hidden; overflow: hidden; z-index: 100;}
 nav .navPart1 .catWrapper .sidebarNav ul li{width: 100%; list-style: none; padding: 0px 15px;}
 nav .navPart1 .catWrapper .sidebarNav ul li button{color: #000; width: 100%; justify-content: flex-start; text-transform: capitalize !important;}
 nav .navPart1 .catWrapper .sidebarNav ul li button:hover{background: transparent !important;}
 nav .navPart1 .catWrapper .sidebarNav.open{height: auto; opacity: 1; visibility: inherit;}
 
 nav .navPart2 ul li{position: relative;}
-nav .navPart2 ul li .submenu{position: absolute; top:150%; left: 0px; min-width: 200px; background: #fff; opacity: 0; visibility: hidden; transition: all 0.1s ease-in-out;}
+nav .navPart2 ul li .submenu{position: absolute; top:150%; left: 0px; min-width: 200px; background: #fff; opacity: 0; visibility: hidden; transition: all 0.1s ease-in-out; z-index: 100;}
 nav .navPart2 ul li .submenu a{display: block; width: 100%;}
 nav .navPart2 ul li .submenu a button{width: 100%; justify-content: flex-start !important; border-radius: 0px !important; text-transform: capitalize !important; font-weight: 600 !important;}
 
 nav .navPart2 ul li .submenu a button:hover{background: #f1f1f1 !important;}
 nav .navPart2 ul li:hover .submenu{opacity: 1; visibility: inherit; top: 100%;}
+
+
+
+.homeBannerSection{position: relative; overflow: hidden;}
+.homeBannerSection *{outline: none !important;}
+.homeBannerSection .slick-arrow{position: absolute; top: 45%; z-index: 100; display: flex; align-items: center; justify-content: center; width: 40px !important; height: 40px !important; background: #444444; border-radius: 100%; font-family: FontAwesome; font-weight: bold;}
+.homeBannerSection .slick-arrow.slick-prev{left: 25px !important;}
+.homeBannerSection .slick-arrow.slick-next{right: 25px !important;}
+
+.homeBannerSection .slick-arrow.slick-next::before{font-family: FontAwesome !important; color: #fff;}
+.homeBannerSection .slick-arrow.slick-prev::before{font-family: FontAwesome !important; color: #fff;}
+
